# FAFS

./: CMakeLists.txt  conanfile.txt  main.cpp  makefile  readme.md  variables.cpp  variables.hpp
include/: array2d.hpp  constants.hpp  hdffile.hpp  kernels.hpp  ocl_array.hpp  ocl_utility.hpp  opencl_kernels.hpp  openmp_implementation.hpp  openmp_kernels.hpp  precision.hpp  user_kernels.hpp  variables.hpp
src/: array2d.cpp  cg_solver.cpp  constants.cpp  hdffile.cpp  kernels.cpp  main.cpp  ocl_array.cpp  ocl_utility.cpp  opencl_kernels.cpp  openmp_implementation.cpp  openmp_kernels.cpp  user_kernels.cpp  variables.cpp
test/: test-main.cpp  test.cpp
visualisation/: renderHDF5.py
